Fix hero image on mobile -- bug caused by an unclosed strong tag.

--- a/css/main.scss
+++ b/css/main.scss
@@ -153,3 +153,11 @@ Spoiler Tagging
   background-color: transparent;
   color: inherit;
 }
+
+/* =========================
+Mobile Troubleshooting - Headshot Not Appearing
+======================= */
+
+.hero__right {
+  min-height: 200px;
+}
